[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://UI/Menu/empty_space.png" type="Texture" id=2]
[ext_resource path="res://UI/Menu/Planet.png" type="Texture" id=3]
[ext_resource path="res://UI/Menu/air.png" type="Texture" id=4]
[ext_resource path="res://UI/Menu/Title.png" type="Texture" id=5]
[ext_resource path="res://UI/Menu/Buttons.gd" type="Script" id=6]
[ext_resource path="res://UI/fonts/Alatsi-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sound/TheElements.ogg" type="AudioStream" id=8]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 127.06
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
hue_variation = 0.03
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 145.0
angular_velocity_random = 0.24
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.18
scale_random = 0.04

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Panel:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.615686, 0.615686, 0.615686, 0.2 ), Color( 0.835294, 0.835294, 0.835294, 0.2 ), Color( 0.615686, 0.615686, 0.615686, 0.2 ), Color( 0.835294, 0.835294, 0.835294, 0.2 ), Color( 0.615686, 0.615686, 0.615686, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Panel:custom_styles/panel:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0.0627451, 0.0627451, 0.803922 ), Color( 0.486275, 0.486275, 0.486275, 0.803922 ), Color( 0.180392, 0.180392, 0.180392, 0.803922 ), Color( 0.486275, 0.486275, 0.486275, 0.803922 ), Color( 0.0627451, 0.0627451, 0.0627451, 0.803922 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.901961 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.283955, 0.283955, 0.283955, 0.803922 )
border_width_left = 6
border_width_top = 1
border_width_right = 6
border_width_bottom = 1
border_color = Color( 0.690039, 0.690039, 0.690039, 0.2 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.176471, 0.176471, 0.176471, 0.764706 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.588235, 0.588235, 0.588235, 0.705882 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 7 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.918557 )
position = Vector2( 319.512, 182.999 )
scale = Vector2( 0.347871, 0.355383 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 69.4583, 95.8465 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
flip_h = true

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.619608 )
position = Vector2( 64.0649, 92.2056 )
amount = 10
lifetime = 17.9
speed_scale = 0.45
process_material = SubResource( 1 )
texture = ExtResource( 4 )

[node name="Particles2D2" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 64.7633, 92.2056 )
amount = 12
lifetime = 26.35
speed_scale = 0.3
process_material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 203.375
margin_top = 269.445
margin_right = 582.638
margin_bottom = 284.275
rect_scale = Vector2( 1.115, 5.622 )
custom_styles/panel = SubResource( 4 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_left = 208.516
margin_top = 275.793
margin_right = 1810.52
margin_bottom = 547.793
rect_scale = Vector2( 0.256473, 0.259345 )
texture = ExtResource( 5 )

[node name="Buttons" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="StoryMode" type="Button" parent="CanvasLayer/Buttons"]
margin_left = 343.345
margin_top = 30.0
margin_right = 511.345
margin_bottom = 68.0
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
disabled = true
text = "Story Mode"

[node name="ArenaMode" type="Button" parent="CanvasLayer/Buttons"]
margin_left = 343.345
margin_top = 80.0
margin_right = 511.345
margin_bottom = 118.0
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Arena Mode"

[node name="Settings" type="Button" parent="CanvasLayer/Buttons"]
margin_left = 343.345
margin_top = 130.0
margin_right = 511.345
margin_bottom = 168.0
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Settings"

[node name="Exit" type="Button" parent="CanvasLayer/Buttons"]
margin_left = 343.345
margin_top = 180.0
margin_right = 511.345
margin_bottom = 218.0
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Exit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true
[connection signal="pressed" from="CanvasLayer/Buttons/StoryMode" to="CanvasLayer/Buttons" method="_on_StoryMode_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/ArenaMode" to="CanvasLayer/Buttons" method="_on_ArenaMode_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Settings" to="CanvasLayer/Buttons" method="_on_Settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Exit" to="CanvasLayer/Buttons" method="_on_Exit_pressed"]
